--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # OBLIGATORIO: Tu API Key de Groq (obtén una en https://console.groq.com)
 GROQ_API_KEY=gsk_tu_api_key_de_groq_aqui
 
-# OBLIGATORIO: Tu API Key personalizada (usa cualquier valor que quieras)
-API_KEYS=mi_api_key_secreta_123
+# Esta api key no utiliza tokens ni nada, es solo para conectarse al index
+# NO MODIFICAR UNICAMENTE ESTE APARTADO
+API_KEYS=xhjkHYvB9Qn32aMWDT26gm7bQeBug-wCuiNS8Jepw5o,1cR7OBsWYy3TBZqGVsb-MHb9C2HvebZ-JK0NgYPRvXY,LUZVm1SaRaFnZ5Vj05crjIpp2r3K6uG1fFN4UIs1md0
 
 # Orígenes permitidos para CORS
 ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8000
